--- a/media/index.css
+++ b/media/index.css
@@ -4,89 +4,45 @@ body {
 	padding: 0;
 }
 
-/* div */
-div[id="wrapper"] {
-	/* background-image: url('background.png'); */
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-position: top center;
-	/* background-size: 100%; */
-	/* padding: 0 2rem; */
-}
 div[id="page"] {
 	max-width: 25rem;
 	margin: 0 auto;
 	padding: 2rem;
 	background-color: #1e252b;
-	opacity: 90%;
 	color: #cccccc;
 }
+div[id="header"] h1 {
+	color: #0099ff;
+}
+div[id="footer"] p {
+	font-size: 75%;
+}
 
-/* elements */
 h1, h2, h3 {
 	font-family: "Open Sans", "Helvetica", "Arial", sans-serif;
 	text-align: center;
 }
-h2 {
+h2, h3 {
 	text-transform: uppercase;
 }
 p {
 	font-family: "Open Sans", "Helvetica", "Arial", sans-serif;
-}
-a {
-	color: #0099ff;
-}
-hr {
-	border-style: none;
-	border-top-style: dashed;
-	border-color: #555555;
-	margin: 2rem 5rem;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.custom-restricted-width {
-	/* To limit the menu width to the content of the menu: */
-	display: inline-block;
-	/* Or set the width explicitly: */
-	/* width: 10em; */
-}
-.pure-menu {
-	font-size: 1.5rem;
-}
-.pure-menu-heading {
-	color: #cccccc;
-}
-.pure-menu-link:hover, .pure-menu-link:focus {
-	background-color: #0099ff;
-	color: #333333;
-}
-
-
-
-
-
-
-
-.centre {
 	text-align: center;
 }
 span[class~="bright"] {
 	color: #cccccc;
 }
-p[class~="small"], span[class~="small"] {
-	font-size: 75%;
+hr {
+	margin: 2rem;
+	border: 0;
+	border-top: thin solid #0099ff;
+}
+
+div[class~="pure-menu"] {
+	font-size: 1.5rem;
+	text-align: center;
+}
+a[class~="pure-menu-link"]:hover, a[class~=".pure-menu-link"]:focus {
+	background-color: #0099ff;
+	color: #25303f;
 }
